# dxtk

./: .gitignore  CMakeLists.txt  main.cpp  main.dx  readme.md
debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  demo.sln  demo.vcxproj  demo.vcxproj.filters  dxtk.vcxproj  dxtk.vcxproj.filters
debug/demo.dir/Debug/: demo.exe.recipe  demo.ilk
debug/demo.dir/Debug/demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
debug/dxtk.dir/Debug/: dxtk.lib.recipe
debug/dxtk.dir/Debug/dxtk.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
debug/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
dxtk/: abstractwindow.h  button.cpp  button.h  column.cpp  column.h  control.cpp  control.h  d2dalias.h  drawable.cpp  drawable.h  dxmacros.h  dxobject.cpp  dxobject.h  image.cpp  image.h  inputarea.cpp  inputarea.h  label.cpp  label.h  line.cpp  line.h  logging.h  mathutils.cpp  mathutils.h  mousearea.cpp  mousearea.h  rectangle.cpp  rectangle.h  renderer.cpp  renderer.h  row.cpp  row.h  shapes.cpp  shapes.h  shitlog.h  slider.cpp  slider.h  textfield.cpp  textfield.h  timer.cpp  (+6 more)
examples/immediate draw/spiral/: spiral.cpp
src/: .sconsign.dblite  SConscript  SConstruct  abstractwindow.h  button.cpp  button.h  cmputils.hpp  control.cpp  control.h  d2dalias.h  dxobject.h  label.cpp  label.h  main.cpp  mathutils.h  mousearea.cpp  mousearea.h  rectangle.cpp  rectangle.h  row.h  shitlog.h  timer.cpp  window.cpp  window.h
(+5 files in other folders)
